pkg/plugins/policies/meshfaultinjection/plugin/v1alpha1/testdata/basic_listener_1.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 17777
filterChains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      httpFilters:
      - name: envoy.filters.http.fault
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
          abort:
            httpStatus: 444
            percentage:
              numerator: 12
          delay:
            fixedDelay: 55s
            percentage:
              numerator: 55
          headers:
          - name: x-kuma-tags
            stringMatch:
              safeRegex:
                regex: .*&kuma.io/service=[^&]*demo-client[,&].*
          responseRateLimit:
            fixedLimit:
              limitKbps: "111000"
            percentage:
              denominator: TEN_THOUSAND
              numerator: 6290
      - name: envoy.filters.http.fault
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
          abort:
            httpStatus: 111
            percentage:
              numerator: 11
          delay:
            fixedDelay: 22s
            percentage:
              numerator: 22
          headers:
          - invertMatch: true
            name: x-kuma-tags
            stringMatch:
              safeRegex:
                regex: .*&kuma.io/service=[^&]*demo-client[,&].*
          responseRateLimit:
            fixedLimit:
              limitKbps: "333000"
            percentage:
              denominator: MILLION
              numerator: 333000
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      internalAddressConfig:
        cidrRanges:
        - addressPrefix: 127.0.0.1
          prefixLen: 32
        - addressPrefix: ::1
          prefixLen: 128
      routeConfig:
        name: inbound:backend
        requestHeadersToRemove:
        - x-kuma-tags
        validateClusters: false
        virtualHosts:
        - domains:
          - '*'
          name: backend
          routes:
          - match:
              prefix: /
            route:
              cluster: backend
              timeout: 0s
      statPrefix: "127_0_0_1_17777"
name: inbound:127.0.0.1:17777
trafficDirection: INBOUND
