pkg/plugins/policies/meshfaultinjection/plugin/v1alpha1/testdata/basic_listener_2_rules.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 17778
enableReusePort: true
filterChains:
- filters:
  - name: envoy.filters.network.tcp_proxy
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
      cluster: self_inbound_dp_17778
      statPrefix: self_inbound_dp_17778
name: self_inbound_dp_17778
trafficDirection: INBOUND
