pkg/plugins/policies/meshfaultinjection/plugin/v1alpha1/testdata/zoneegress_matches_sni.listener.golden.yaml
address:
  socketAddress:
    address: 10.20.30.40
    portValue: 10002
enableReusePort: true
filterChains:
- filterChainMatch:
    serverNames:
    - sni.extsvc.default.zone-1.aws-aurora.8443
    transportProtocol: tls
  filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      httpFilters:
      - name: kri_mfi_default_zone-1_ns-1_mfi-zone-egress_
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.common.matching.v3.ExtensionWithMatcher
          extensionConfig:
            name: envoy.filters.http.fault
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
              abort:
                httpStatus: 503
                percentage:
                  numerator: 50
          xdsMatcher:
            matcherList:
              matchers:
              - onMatch:
                  action:
                    name: skip
                    typedConfig:
                      '@type': type.googleapis.com/envoy.extensions.filters.common.matcher.action.v3.SkipFilter
                predicate:
                  notMatcher:
                    singlePredicate:
                      input:
                        name: envoy.matching.inputs.server_name
                        typedConfig:
                          '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.ServerNameInput
                      valueMatch:
                        exact: sni.extsvc.default.zone-1.aws-aurora.8443
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      internalAddressConfig:
        cidrRanges:
        - addressPrefix: 127.0.0.1
          prefixLen: 32
        - addressPrefix: ::1
          prefixLen: 128
      routeConfig:
        name: outbound:mes-http
        requestHeadersToAdd:
        - header:
            key: x-kuma-tags
            value: '&kuma.io/display-name=web&'
        validateClusters: false
        virtualHosts:
        - domains:
          - '*'
          name: mes-http
          routes:
          - match:
              prefix: /
            name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
            route:
              cluster: mes-http
              timeout: 0s
      statPrefix: mes-http
  name: mes-http
name: self_zoneegress_dp_ze-port
trafficDirection: INBOUND
